--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,18 @@ ol {
 img {
   display: block;
 }
+
+.h2-container-name {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 0.03em;
+  color: #212121;
+  text-align: center;
+  margin-bottom: 50px;
+}
 /* ============================== MAIN SETTINGS DONE ===================================== */
 
 /* ============================== HEADER ============================================== */
@@ -205,20 +217,9 @@ img {
   justify-content: space-between;
 }
 
-.h2-what {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-align: center;
-}
-
 .what-img {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
 }
 
 .h2-pics {
@@ -240,20 +241,6 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.our-team-h2 {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  letter-spacing: 0.03em;
-
-  color: #212121;
-
-  text-align: center;
-  padding-bottom: 50px;
 }
 
 .our-team-name-h3 {
@@ -316,6 +303,33 @@ img {
   fill: white;
 }
 
+.regular-customers-items {
+  display: flex;
+}
+
+.regular-customer-icon {
+  width: 106px;
+  height: 60px;
+  fill: #afb1b8;
+}
+
+.regular-customer-item {
+  flex-basis: calc((100% - 30px * 5) / 6);
+}
+
+.regular-customer-link {
+  display: flex;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 100%;
+  height: 94px;
+  padding: 16px 32px;
+}
+
+.regular-customer-item:not(:last-child) {
+  margin-right: 30px;
+}
 /* ======================================== MAIN ========================================= */
 
 /* ===================================== FOOTER ========================================= */
